# MLOps_2026

./: .gitignore  README.md  eda_pcam.py  pyproject.toml  run_train_gpu.sh
.github/workflows/: ci.yml
experiments/: singleprediction.py  testmodel.py  train.py
experiments/benchmarking/: benchmark.py
experiments/configs/: config.yaml  train_config.yaml
experiments/configs/data/: default.yaml
experiments/configs/model/: default.yaml
experiments/configs/training/: default.yaml
scripts/: q6.FPFN  q6_error_analysis.py
src/ml_core/: train.py
src/ml_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ml_core/data/: loader.py  loader_test.py  pcam.py
src/ml_core/models/: mlp.py
src/ml_core/utils/: logging.py
